--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,8 +7,22 @@
   justify-content: center;
   border: 1px solid grey;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: cover;
+
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+      -webkit-transition: 0.1s ease-in-out;
+      transition: 0.1s ease-in-out;
+    }
+
+    & .content {
+      opacity: 1;
+      transition: 0.9s;
+    }
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -18,6 +32,13 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -25,10 +46,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    opacity: 0;
 
     .title {
       margin-bottom: 6px;
-      font-size: 19px;
+      font-size: 21px;
       color: white;
     }
 
