--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,20 +7,14 @@
   justify-content: center;
   border: 1px solid grey;
   margin: 0 7.5px 15px;
+  position: relative;
 
   &:hover {
     cursor: pointer;
 
-    & .background-image {
-      -webkit-filter: grayscale(100%);
-      filter: grayscale(100%);
-      -webkit-transition: 0.1s ease-in-out;
-      transition: 0.1s ease-in-out;
-    }
-
     & .content {
-      opacity: 1;
-      transition: 0.9s;
+      opacity: 0.8;
+      transition: 0.7s ease;
     }
   }
 
@@ -40,14 +34,17 @@
   }
 
   .content {
-    height: 90px;
-    padding: 0 25px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
     opacity: 0;
+    background-color: black;
 
     .title {
       margin-bottom: 6px;
