--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -12,7 +12,7 @@
     display: flex;
 
     .option {
-      font-size: 19px;
+      font-size: 18px;
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -23,6 +23,16 @@
       &:hover {
         color: black;
         font-weight: bolder;
+      }
+
+      .dd-projects {
+        .dd-title {
+          display: flex;
+
+          .dd-title-symbol {
+            padding-left: 7px;
+          }
+        }
       }
 
       .dd-projects-list {
