--- a/src/components/projectDetails/projectDetails.styles.scss
+++ b/src/components/projectDetails/projectDetails.styles.scss
@@ -1,21 +1,36 @@
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.images-details {
+  width: 65%;
+  margin: 0 auto;
 
-  .images-details {
-    .image {
-      .background-image {
-        width: 100%;
-        height: 100%;
-        background-position: center;
-        background-size: cover;
+  .image {
+    width: 100%;
+    height: 800px;
+    position: relative;
+    margin: 50px;
+    justify-content: center;
+
+    .background-image {
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+
+    .image-content {
+      .description {
+        position: absolute;
+        font-size: 20px;
+        color: white;
+        top: 90%;
+        left: 2%;
+        opacity: 0;
       }
+    }
 
-      .image-content {
-        .title {
-          font-size: 30px;
-        }
+    &:hover {
+      .image-content .description {
+        opacity: 1;
+        transition: 0.3s ease;
       }
     }
   }
